--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Meu$</title>
   <link rel="manifest" href="/manifest.webmanifest">
 <meta name="theme-color" content="#593825">
-<link rel="apple-touch-icon" href="/icons/icon-192.png">
+<link rel="apple-touch-icon" href="/icons/icon-256.png">
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
@@ -297,6 +297,29 @@ html, body{ overflow-x: hidden; }
   .cartao-disp{
     font-size: 9px;  /* 1px menor para caber */
   }
+}
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  /* iOS safe area */
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+
+  /* Altura correta no mobile */
+  min-height: 100vh;
+  min-height: 100dvh; /* iOS moderno */
+}
+
+/* Se você tem um wrapper principal, aplique nele também */
+#app, .app, .container, main {
+  min-height: 100vh;
+  min-height: 100dvh;
+}
+body, #app, .app, .container, main {
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
   </style>
@@ -1146,6 +1169,16 @@ function toast(msg,type){
     });
   }
 </script>
+<script>
+  function setVh() {
+    const vh = window.innerHeight * 0.01;
+    document.documentElement.style.setProperty('--vh', `${vh}px`);
+  }
+  window.addEventListener('resize', setVh);
+  window.addEventListener('orientationchange', setVh);
+  setVh();
+</script>
 
 </body>
+
 </html>
