--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     *{margin:0;padding:0;box-sizing:border-box;-webkit-tap-highlight-color:transparent}
-    :root{--primary:#593825;--primary-dark:#3D2518;--secondary:#9D9167;--background:#FAF9F7;--card-bg:#FFFFFF;--success:#4A9B6E;--success-light:#E8F5ED;--danger:#C45C4D;--danger-light:#FDEAE8;--warning:#E8A940;--text-dark:#1A1A1A;--text-medium:#666;--text-light:#999;--border:#F0EEEB;--safe-top:env(safe-area-inset-top);--safe-bottom:env(safe-area-inset-bottom)}
+    :root{
+  --safe-top: env(safe-area-inset-top);
+  --safe-bottom: env(safe-area-inset-bottom);
+}
     [data-theme="dark"]{--primary:#6B4332;--primary-dark:#4A2E22;--secondary:#B8A87A;--background:#1A1A1A;--card-bg:#2D2D2D;--success:#5AB87A;--success-light:#1E3A2A;--danger:#E07060;--danger-light:#3A1E1E;--warning:#F0B850;--text-dark:#F0F0F0;--text-medium:#B0B0B0;--text-light:#808080;--border:#404040}
     html,body{height:100%;overflow:hidden}
     body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;background:var(--background);color:var(--text-dark);font-size:14px;position:fixed;width:100%;height:100%;overflow:hidden}
@@ -31,10 +34,19 @@
     @keyframes spin{to{transform:rotate(360deg)}}
     
     /* APP */
-    .app{display:flex;flex-direction:column;height:100%;padding-top:var(--safe-top);padding-bottom:var(--safe-bottom)}
+    .app{display:flex;flex-direction:column;height:100%;padding-top:0; /* remove o buraco */padding-bottom:var(--safe-bottom);}
+
     
     /* HEADER */
-    .header{background:var(--primary);padding:12px 16px;display:flex;justify-content:space-between;align-items:center;flex-shrink:0}
+    header{
+  background:var(--primary);
+  padding:calc(12px + var(--safe-top)) 16px 12px 16px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  flex-shrink:0;
+}
+
     [data-theme="dark"] .header{background:var(--card-bg);border-bottom:1px solid var(--border)}
     .logo{display:flex;align-items:center;gap:8px;color:#fff;font-size:18px;font-weight:700}
     [data-theme="dark"] .logo{color:var(--text-dark)}
@@ -1182,3 +1194,4 @@ function toast(msg,type){
 </body>
 
 </html>
+
