--- a/index.html
+++ b/index.html
@@ -1190,8 +1190,14 @@ function toast(msg,type){
   window.addEventListener('orientationchange', setVh);
   setVh();
 </script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  console.log("Meu$ iniciado");
+});
+</script>
 
 </body>
 
 </html>
+
 
