--- a/index.html
+++ b/index.html
@@ -1191,13 +1191,22 @@ function toast(msg,type){
   setVh();
 </script>
 <script>
-document.addEventListener("DOMContentLoaded", () => {
-  console.log("Meu$ iniciado");
-});
+function initApp() {
+  console.log("App iniciado");
+
+  // carregar dados
+  // inicializar gráficos
+  // ativar botões
+  // registrar eventos
+}
+
+document.addEventListener("DOMContentLoaded", initApp);
 </script>
+
 
 </body>
 
 </html>
+
 
 
