--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 // =============================================
 // CONFIGURAÇÃO - COLOQUE SUA URL DO WEB APP AQUI
 // =============================================
-var API_URL = '14erjYN04BzaHkife0aa5VJZxDW4A0BKhRoRQOF3HQ9M';
+var API_URL = 'https://docs.google.com/spreadsheets/d/14erjYN04BzaHkife0aa5VJZxDW4A0BKhRoRQOF3HQ9M/edit?gid=1900588037#gid=1900588037';
 // Exemplo: 'https://script.google.com/macros/s/AKfycbx.../exec'
 
 var data={historico:[],cartoes:[],categorias:[],contasFixas:[],objetivos:[],mesesDisponiveis:[]};
@@ -928,3 +928,4 @@ if("serviceWorker" in navigator){window.addEventListener("load",()=>{navigator.s
 </script>
 </body>
 </html>
+
