Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 // =============================================
 // CONFIGURAÇÃO - COLOQUE SUA URL DO WEB APP AQUI
 // =============================================
-var API_URL = 'https://docs.google.com/spreadsheets/d/14erjYN04BzaHkife0aa5VJZxDW4A0BKhRoRQOF3HQ9M/edit?gid=1900588037#gid=1900588037';
+var API_URL = 'https://script.google.com/macros/s/AKfycbz-Z2vw2ciagjwx7deLfXlRgQOfc0Bwjfa0W1hsRR3UuXTb83puPsdksnelFJsh9Ohw/exec';
 // Exemplo: 'https://script.google.com/macros/s/AKfycbx.../exec'
 
 var data={historico:[],cartoes:[],categorias:[],contasFixas:[],objetivos:[],mesesDisponiveis:[]};
@@ -928,4 +928,5 @@ if("serviceWorker" in navigator){window.addEventListener("load",()=>{navigator.s
 </script>
 </body>
 </html>
+
 
