Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 // =============================================
 // CONFIGURAÇÃO
 // =============================================
-var API_URL = 'COLE_AQUI_A_URL_DO_SEU_WEB_APP_DO_GOOGLE';
+var API_URL = 'https://script.google.com/macros/s/AKfycbz-Z2vw2ciagjwx7deLfXlRgQOfc0Bwjfa0W1hsRR3UuXTb83puPsdksnelFJsh9Ohw/exec';
 
 var data={historico:[],cartoes:[],categorias:[],contasFixas:[],objetivos:[],mesesDisponiveis:[]};
 var mesFiltro='atual';
@@ -1040,3 +1040,4 @@ if("serviceWorker" in navigator){window.addEventListener("load",()=>{navigator.s
 </script>
 </body>
 </html>
+
