--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     .resumo-grid{display:grid;grid-template-columns:1fr 1fr;gap:6px}
     .card{background:var(--card-bg);border-radius:10px;padding:10px;box-shadow:0 1px 3px rgba(0,0,0,.05)}
     .card-label{font-size:9px;font-weight:600;color:var(--text-light);text-transform:uppercase;letter-spacing:.3px;margin-bottom:2px}
-    .card-value{font-size:15px;font-weight:700}
+    .card-value{font-size:10px;font-weight:700}
     .card-value.green{color:var(--success)}
     .card-value.red{color:var(--danger)}
     
@@ -77,7 +77,7 @@
     .obj-card:hover .obj-del,.obj-card:active .obj-del{display:flex}
     
     /* ========== GRÁFICOS ========== */
-    .chart-box{background:var(--card-bg);border-radius:10px;padding:10px;box-shadow:0 1px 3px rgba(0,0,0,.05);margin-bottom:10px}
+    .chart-box{background:var(--card-bg);border-radius:10px;padding:10px;box-shadow:0 1px 3px rgba(0,0,0,.05);margin-bottom:10px; min-width:0;}
     .chart-title{font-size:11px;font-weight:600;margin-bottom:6px;display:flex;align-items:center;gap:4px}
     .chart-wrap{height:120px;position:relative}
     .chart-box-full{width:100%}
@@ -129,7 +129,7 @@
     .form-input,.form-select{width:100%;padding:8px;border:1px solid var(--border);border-radius:6px;font-size:12px;background:var(--card-bg);color:var(--text-dark)}
     .form-input:focus,.form-select:focus{outline:none;border-color:var(--primary)}
     .form-row{display:grid;grid-template-columns:1fr 1fr;gap:8px}
-    .form-row-4{display:grid;grid-template-columns:1fr 1fr 1fr 1fr;gap:8px}
+    .form-row-4{display:grid;grid-template-columns:1fr 1fr;gap:8px}    
     .btn{width:100%;padding:10px;border:none;border-radius:8px;font-size:13px;font-weight:600;cursor:pointer;background:var(--primary);color:#fff}
     .btn:disabled{background:var(--text-light)}
     .btn-spin{display:inline-block;width:14px;height:14px;border:2px solid rgba(255,255,255,.3);border-top-color:#fff;border-radius:50%;animation:spin .6s linear infinite;margin-right:6px}
@@ -442,3 +442,4 @@ function toast(msg,type){var w=document.getElementById('toastWrap'),t=document.c
 <script>if("serviceWorker" in navigator)window.addEventListener("load",()=>navigator.serviceWorker.register("/service-worker.js").catch(console.error))</script>
 </body>
 </html>
+
