Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     /* ========== ABA ADICIONAR ========== */
     .add-full{margin-bottom:8px}
     .add-row-2{display:grid;grid-template-columns:1fr 1fr;gap:8px}
-    
+    input[type="date"]{min-width:0;max-width:100%}
     .form-box{background:var(--card-bg);border-radius:10px;box-shadow:0 1px 3px rgba(0,0,0,.05);overflow:hidden}
     .form-head{padding:8px 10px;display:flex;align-items:center;gap:6px;cursor:pointer;border-bottom:1px solid var(--border)}
     .form-head-icon{font-size:14px}
@@ -126,7 +126,7 @@
     .form-body{padding:10px}
     .form-group{margin-bottom:8px}
     .form-label{display:block;font-size:10px;font-weight:500;color:var(--text-medium);margin-bottom:3px}
-    .form-input,.form-select{width:100%;padding:8px;border:1px solid var(--border);border-radius:6px;font-size:12px;background:var(--card-bg);color:var(--text-dark); min-width:0;}
+    .form-input,.form-select{width:100%;padding:8px;border:1px solid var(--border);border-radius:6px;font-size:12px;background:var(--card-bg);color:var(--text-dark)}
     .form-input:focus,.form-select:focus{outline:none;border-color:var(--primary)}
     .form-row{display:grid;grid-template-columns:1fr 1fr;gap:8px}
     .form-row-4{display:grid;grid-template-columns:1fr 1fr;gap:8px}    
@@ -442,6 +442,7 @@ function toast(msg,type){var w=document.getElementById('toastWrap'),t=document.c
 <script>if("serviceWorker" in navigator)window.addEventListener("load",()=>navigator.serviceWorker.register("/service-worker.js").catch(console.error))</script>
 </body>
 </html>
+
 
 
 
