--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Meu$">
@@ -42,6 +42,39 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;c
 .toast-wrap{position:fixed;top:calc(50px + env(safe-area-inset-top));left:10px;right:10px;z-index:9000;pointer-events:none}.toast{background:var(--text-dark);color:#fff;padding:10px 14px;border-radius:8px;margin-bottom:6px;font-size:12px;font-weight:500;animation:fadeIn .3s}.toast.ok{background:var(--success)}.toast.err{background:var(--danger)}@keyframes fadeIn{from{opacity:0;transform:translateY(-10px)}to{opacity:1;transform:translateY(0)}}
 .empty{text-align:center;padding:16px;color:var(--text-light)}.empty-icon{font-size:24px;margin-bottom:4px;opacity:.5}.empty p{font-size:11px}
 @supports(padding-bottom:env(safe-area-inset-bottom)){.nav{padding-bottom:env(safe-area-inset-bottom)}}
+    /* ===== iPhone Safe Area Fix (remove faixa branca embaixo) ===== */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: var(--background);
+}
+
+/* Se você tiver um container principal (#app, bottom) */
+#app, .app, .container, main {
+  min-height: 100vh;
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
+/* Ajuste do menu inferior (troque .bottom-nav pelo seu seletor real se for diferente) */
+#bottomNav {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  padding-bottom: env(safe-area-inset-bottom);
+  background: var(--background);
+
+  /* garante que não fique “flutuando” com branco embaixo */
+  box-sizing: border-box;
+  z-index: 9999;
+}
+/* evita conteúdo ficar atrás do menu inferior */
+body {
+  padding-bottom: calc(70px + env(safe-area-inset-bottom));
+}
+
   </style>
 </head>
 <body>
@@ -149,4 +182,5 @@ function toast(msg,type){var w=document.getElementById('toastWrap'),t=document.c
 </script>
 </body>
 </html>
+
 
